--- a/404.html
+++ b/404.html
@@ -11,13 +11,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/plugin-docs/assets/css/0.styles.71f25e5e.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.f451d575.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/3.d2d4cdfd.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.50c7e6b6.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.a78e401a.js"><link rel="prefetch" href="/plugin-docs/assets/js/2.434c690b.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.8e39e595.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.2991fb43.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.f6007569.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.9fa549cc.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.d6182f0e.js"><link rel="prefetch" href="/plugin-docs/assets/js/9.a8b67f92.js">
+    <link rel="preload" href="/plugin-docs/assets/css/0.styles.71f25e5e.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.63a1d654.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/3.d2d4cdfd.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.50c7e6b6.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.a78e401a.js"><link rel="prefetch" href="/plugin-docs/assets/js/12.5e708278.js"><link rel="prefetch" href="/plugin-docs/assets/js/13.903e3a2c.js"><link rel="prefetch" href="/plugin-docs/assets/js/2.434c690b.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.2991fb43.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.f6007569.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.9fa549cc.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.d6182f0e.js"><link rel="prefetch" href="/plugin-docs/assets/js/9.a8b67f92.js">
     <link rel="stylesheet" href="/plugin-docs/assets/css/0.styles.71f25e5e.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/plugin-docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/plugin-docs/assets/js/app.f451d575.js" defer></script><script src="/plugin-docs/assets/js/3.d2d4cdfd.js" defer></script>
+    <script src="/plugin-docs/assets/js/app.63a1d654.js" defer></script><script src="/plugin-docs/assets/js/3.d2d4cdfd.js" defer></script>
   </body>
 </html>
