--- a/404.html
+++ b/404.html
@@ -11,13 +11,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/plugin-docs/assets/css/0.styles.8f596734.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.eb722f6d.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/3.0fc7dab2.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.d80382c0.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.868ea19a.js"><link rel="prefetch" href="/plugin-docs/assets/js/12.9509b97f.js"><link rel="prefetch" href="/plugin-docs/assets/js/13.809a0356.js"><link rel="prefetch" href="/plugin-docs/assets/js/2.5a94bf61.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.59597f48.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.99cafc1a.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.04ecc179.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.2efba803.js"><link rel="prefetch" href="/plugin-docs/assets/js/9.23cc3d82.js">
+    <link rel="preload" href="/plugin-docs/assets/css/0.styles.8f596734.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.347fc2eb.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/3.0fc7dab2.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.d80382c0.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.868ea19a.js"><link rel="prefetch" href="/plugin-docs/assets/js/12.9509b97f.js"><link rel="prefetch" href="/plugin-docs/assets/js/13.809a0356.js"><link rel="prefetch" href="/plugin-docs/assets/js/2.5a94bf61.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.59597f48.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.99cafc1a.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.04ecc179.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.2efba803.js"><link rel="prefetch" href="/plugin-docs/assets/js/9.468d5c68.js">
     <link rel="stylesheet" href="/plugin-docs/assets/css/0.styles.8f596734.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/plugin-docs/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/plugin-docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/plugin-docs/assets/js/app.eb722f6d.js" defer></script><script src="/plugin-docs/assets/js/3.0fc7dab2.js" defer></script>
+    <script src="/plugin-docs/assets/js/app.347fc2eb.js" defer></script><script src="/plugin-docs/assets/js/3.0fc7dab2.js" defer></script>
   </body>
 </html>
