deploy: 2791521af1b2b49403861e0d659db0c7b0d0e7b1

--- a/404.html
+++ b/404.html
@@ -11,13 +11,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/plugin-docs/assets/css/0.styles.8f596734.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.45d904f9.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/3.0fc7dab2.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.3a3d4a3b.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.319617d7.js"><link rel="prefetch" href="/plugin-docs/assets/js/12.e3562104.js"><link rel="prefetch" href="/plugin-docs/assets/js/13.601274ad.js"><link rel="prefetch" href="/plugin-docs/assets/js/2.5a94bf61.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.59597f48.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.99cafc1a.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.04ecc179.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.3d4b5d94.js"><link rel="prefetch" href="/plugin-docs/assets/js/9.fa2c6979.js">
+    <link rel="preload" href="/plugin-docs/assets/css/0.styles.8f596734.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.7cd07ed5.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/3.0fc7dab2.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.be3ad731.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.449b64e3.js"><link rel="prefetch" href="/plugin-docs/assets/js/12.2ef41cce.js"><link rel="prefetch" href="/plugin-docs/assets/js/13.2bc7d713.js"><link rel="prefetch" href="/plugin-docs/assets/js/2.5a94bf61.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.59597f48.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.99cafc1a.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.04ecc179.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.3d4b5d94.js"><link rel="prefetch" href="/plugin-docs/assets/js/9.fa2e5db8.js">
     <link rel="stylesheet" href="/plugin-docs/assets/css/0.styles.8f596734.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/plugin-docs/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/plugin-docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/plugin-docs/assets/js/app.45d904f9.js" defer></script><script src="/plugin-docs/assets/js/3.0fc7dab2.js" defer></script>
+    <script src="/plugin-docs/assets/js/app.7cd07ed5.js" defer></script><script src="/plugin-docs/assets/js/3.0fc7dab2.js" defer></script>
   </body>
 </html>
