--- a/404.html
+++ b/404.html
@@ -11,13 +11,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/docs/assets/css/0.styles.cd2a5e32.css" as="style"><link rel="preload" href="/docs/assets/js/app.6f91c59c.js" as="script"><link rel="preload" href="/docs/assets/js/3.0fc7dab2.js" as="script"><link rel="prefetch" href="/docs/assets/js/10.a9ca5675.js"><link rel="prefetch" href="/docs/assets/js/11.c79b93e6.js"><link rel="prefetch" href="/docs/assets/js/12.951c0ea6.js"><link rel="prefetch" href="/docs/assets/js/13.acbb5191.js"><link rel="prefetch" href="/docs/assets/js/2.d11718c9.js"><link rel="prefetch" href="/docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/docs/assets/js/5.59597f48.js"><link rel="prefetch" href="/docs/assets/js/6.99cafc1a.js"><link rel="prefetch" href="/docs/assets/js/7.04ecc179.js"><link rel="prefetch" href="/docs/assets/js/8.3d4b5d94.js"><link rel="prefetch" href="/docs/assets/js/9.91b69a5f.js">
+    <link rel="preload" href="/docs/assets/css/0.styles.cd2a5e32.css" as="style"><link rel="preload" href="/docs/assets/js/app.eb8ca4ee.js" as="script"><link rel="preload" href="/docs/assets/js/3.0fc7dab2.js" as="script"><link rel="prefetch" href="/docs/assets/js/10.be3ad731.js"><link rel="prefetch" href="/docs/assets/js/11.449b64e3.js"><link rel="prefetch" href="/docs/assets/js/12.2ef41cce.js"><link rel="prefetch" href="/docs/assets/js/13.2bc7d713.js"><link rel="prefetch" href="/docs/assets/js/14.85b3ea20.js"><link rel="prefetch" href="/docs/assets/js/15.b05967be.js"><link rel="prefetch" href="/docs/assets/js/16.d57d7617.js"><link rel="prefetch" href="/docs/assets/js/17.c5331482.js"><link rel="prefetch" href="/docs/assets/js/18.a6274b6a.js"><link rel="prefetch" href="/docs/assets/js/2.d11718c9.js"><link rel="prefetch" href="/docs/assets/js/4.1c74807d.js"><link rel="prefetch" href="/docs/assets/js/5.59597f48.js"><link rel="prefetch" href="/docs/assets/js/6.99cafc1a.js"><link rel="prefetch" href="/docs/assets/js/7.04ecc179.js"><link rel="prefetch" href="/docs/assets/js/8.91e23f48.js"><link rel="prefetch" href="/docs/assets/js/9.5bd3972e.js">
     <link rel="stylesheet" href="/docs/assets/css/0.styles.cd2a5e32.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/docs/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/docs/assets/js/app.6f91c59c.js" defer></script><script src="/docs/assets/js/3.0fc7dab2.js" defer></script>
+    <script src="/docs/assets/js/app.eb8ca4ee.js" defer></script><script src="/docs/assets/js/3.0fc7dab2.js" defer></script>
   </body>
 </html>
